--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -31,3 +31,9 @@ img {
   border-radius:20px;
 }
 </style>
+  <ul>
+    <li><a href="#">About the rally</a></li>
+    <li><a href="#">Our story</a></li>
+    <li><a href="#"> Contact</a></li>
+  </ul>
+</header>
