--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,10 @@
 
+header{
+    text-align: center;
+    background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
+    background-size: cover;
+    color: black;
+  }
 ul {
   padding: 10px;
   background: black;
