--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,13 +1,36 @@
 p{
   font-family: helvetica;
 }
-header{
+header.masthead{
     text-align: center;
     background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
+    background-attachment: scroll;
     background-size: cover;
+    background-position: center center;
     color: black;
     font-family: helvetica;
   }
+@media (min-width: 768px) {
+  header.masthead .intro-text {
+    padding-top: 300px;
+    padding-bottom: 200px;
+  }
+  header.masthead .intro-text .intro-lead-in {
+    font-size: 40px;
+    font-style: italic;
+    line-height: 40px;
+    margin-bottom: 25px;
+    font-family: helvetica;
+  }
+
+header.masthead .intro-text .intro-heading {
+    font-size: 75px;
+    font-weight: 700;
+    line-height: 75px;
+    margin-bottom: 50px;
+    font-family: helvetica;
+  }
+
 ul {
   padding: 10px;
   background: black;
