--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -74,3 +74,7 @@ img {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+button{
+  background-color: transparent;
+  border-color: transparent;
+}
