--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -85,7 +85,7 @@ img {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-button{
+div button{
   background-color: transparent;
   border-color: transparent;
 }
