playing around with the social media buttons

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -86,7 +86,7 @@ img {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-div button{
+button{
   background-color: transparent;
   border-color: transparent;
 }
