--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,4 +1,4 @@
-header { 
+header{
   font-family: helvetica;
   background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
   background-size: cover;
@@ -10,8 +10,8 @@ a {
 }
 h1 {
   text-align: center;
-  font-size: 80px
-  font-family: helvetica;
+  font-size: 70px;
+  color: black;
 }
 
 h2 {
@@ -70,16 +70,3 @@ li a:hover {
 @media screen and (max-width: 600px) {
   ul.topnav li.right,
   ul.topnav li {float: none;}
-
-.container1 {
-  font-family: helvetica;
-  align-items: center;
-  color: black;
-  font-style: normal;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-div button{
-  background-color: transparent;
-  border-color: transparent;
-}
