--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -10,13 +10,12 @@ a {
 }
 h1 {
   text-align: center;
-  font-size: 80px
+  font-size: 70px
   font-family: helvetica;
 }
 
 h2 {
   text-align: center;
-  color: black;
   font-size: 50px;
   color: black;
 }
@@ -36,7 +35,7 @@ img {
   margin-right: auto;
   height: 200px;
   border: 3px solid black;
-  border-radius:360px;
+  border-radius:100px;
 }
 ul {
   list-style-type: none;
@@ -69,17 +68,5 @@ li a:hover {
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right,
-  ul.topnav li {float: none;}
-
-.container1 {
-  font-family: helvetica;
-  align-items: center;
-  color: black;
-  font-style: normal;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-div button{
-  background-color: transparent;
-  border-color: transparent;
-}
+  ul.topnav li {float: none;
+  }
