--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -16,7 +16,6 @@ h1 {
   font-size: 80px
   font-family: helvetica;
 }
-
 h2 {
   text-align: center;
   color: black;
@@ -24,7 +23,6 @@ h2 {
   color: black;
   font-style: italic;
 }
-h3 {
 h2 {
   font-size: 30px
   font-style: italic;
@@ -33,7 +31,6 @@ h2 {
 h4 {
   font-size: 30px
   font-style: italic;
->>>>>>> 6a8ebeb8ccbf42feb511b46e0c881418fff89ea6
 }
 
 .logo {
@@ -65,7 +62,7 @@ li{
 li a {
   display: block;
   color: white;
-  text-align: center;
+  background-position: center;
   padding: 14px 16px;
   text-decoration: none;
 }
@@ -81,6 +78,19 @@ li a:hover {
   font-weight: bold;
   font-style: italic;
   color: black;
+}
+.team{
+  display: inline;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.subtext{
+  font-family: helvetica;
+  font-style: italic;
 }
 button {
   background-color: transparent;
@@ -100,8 +110,4 @@ button {
   font-style: normal;
   padding-top: 20px;
   padding-bottom: 20px;
-}
-button {
-  background-color: transparent;
-  border-color: transparent;
 }
