added image, changed CSS design, organised html indentation

--- a/CSS Contact/stylesheetcontact.css
+++ b/CSS Contact/stylesheetcontact.css
@@ -27,7 +27,7 @@ header.masthead{
     }
 .container {
   font-family: helvetica;
-  color: white
+  color: white;
   display: inline;
   list-style: none;
   text-align: left;
