--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -104,7 +104,7 @@ li a:hover {
   font-family: helvetica;
   font-weight: bold;
   font-style: italic;
-  color: black;
+  color: white;
 }
 .team{
   display: inline;
