--- a/CSS/CSS Contact/stylesheetcontact.css
+++ b/CSS/CSS Contact/stylesheetcontact.css
@@ -1,30 +1,49 @@
 p{
   font-family: helvetica;
 }
+header {
+  font-family: helvetica;
+  color: black;
+  position: sticky;
 
-header.masthead{
-    text-align: center;
-    background: url(mongol-rally.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    color: black;
-    font-family: helvetica;
-  }
-@media (min-width: 768px) {
-  header.masthead .intro-text {
-    padding-top: 50px;
-    padding-bottom: 10px;
-  }
-  header.masthead .intro-text .intro-heading {
-      font-size: 75px;
-      font-weight: 700;
-      line-height: 75px;
-      margin-bottom: 50px;
-      font-family: helvetica;
-      align-items: center;
-    }
+}
+body{
+  background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #333;
+  overflow: hidden;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  font-size: 15px;
+}
+li{
+  float: left;
+  font-family: helvetica;
+  color: white;
+}
+
+li a {
+  display: block;
+  color: white;
+  background-position: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #111;
+}
+.active {
+  background-color: #4CAF50;
+}
+
 .container {
   font-family: helvetica;
   color: white;
@@ -39,25 +58,20 @@ container1{
   background-color: white;
   padding: 10px 10px 10px 10px;
 }
-header{
-    text-align: center;
-    background: url(https://data1.ibtimes.co.in/en/full/613326/mongol-rally.jpg);
-    background-size: cover;
-    color: black;
-    font-family: helvetica;
-    font-style: normal;
-}
+
 span{
   color: white;
 }
 h1 {
   font-size: 80px
   font-family: helvetica;
-  align-items: center;
+  text-align: center;
 }
 iframe {
-  align-items: center;
-  align-content: center;
+  width: 550px;
+  height: 900px;
+  margin: 0 auto;
+
 }
 ul {
   display: inline-block;
@@ -69,6 +83,8 @@ ul {
   font-style: normal;
   padding-top: 20px;
   padding-bottom: 20px;
+  text-align: center;
+
 }
 button {
   background-color: transparent;
