--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -8,7 +8,7 @@ header {
   padding: 1px;
 }
 span{
-  background-color: transparent;
+  background-color: white;
 }
 body {
   font-family: helvetica;
@@ -63,9 +63,9 @@ h4 {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
-  height: 200px;
+  height: 250px;
   border: 3px solid black;
-  border-radius:360px;
+  border-radius: 360px;
 }
 ul {
   list-style-type: none;
