--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -8,7 +8,7 @@ header {
   padding: 1px;
 }
 span{
-  background-color: white;
+  background-color: transparent;
 }
 body {
   font-family: helvetica;
@@ -63,9 +63,9 @@ h4 {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
-  height: 250px;
-  border: 3px solid black;
-  border-radius: 360px;
+  height: 220px;
+  border: 2px solid black;
+  border-radius:360px;
 }
 ul {
   list-style-type: none;
@@ -100,6 +100,9 @@ li a:hover {
 }
 #AbouttheRally {
   background-color: Olive;
+  padding-bottom: 200px;
+  padding-top: 70px;
+  display: block;
 }
 .rules{
   display: block;
@@ -123,6 +126,7 @@ li a:hover {
 }
 #OurStory {
   background-color: gray;
+  padding-bottom: 150px;
 }
 #SponsorUs {
   background-color: Olive;
@@ -131,9 +135,7 @@ button {
   background-color: transparent;
   border-color: transparent;
 }
-.container1{
-  font-family: helvetica;
-}
+
 @media screen and () {
   ul.topnav li.right,
   ul.topnav li {float: none;}
