fixed contact background issue, changed height of logo

--- a/CSS Contact/stylesheetcontact.css
+++ b/CSS Contact/stylesheetcontact.css
@@ -8,7 +8,7 @@ header {
 
 }
 body{
-  background-image: url(/Users/user/Documents/GitHub/group_project/mongolrally2.jpg);
+  background-image: url(http://a.espncdn.com/photo/2014/0812/mag_mongolrally03_lb_2048x1367.jpg);
   background-size: cover;
   background-position: center;
   min-height: 100vh;
